# Sistema-de-gestao-de-tarefas-em-equipe

./: Dockerfile  LICENSE  README.md  Tarefas.db  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
backend/: .gitignore  Dockerfile  Dockerfile.prod  main.py  pyproject.toml
backend/configs/: db_config.py  security.py  session.py
backend/models/: Task.py
backend/routers/: task_router.py
backend/schemas/: __init__.py  task_schemas.py
frontend/: .env.production  .gitignore  Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  layout.css
frontend/src/components/CreateTaskForm/: TaskForm.module.css  index.tsx
frontend/src/components/FilterForm/: FilterForm.module.css  index.tsx
frontend/src/components/ListSystem/: ListSystem.module.css  index.tsx
frontend/src/components/PaginationComponent/: PaginationComponent.module.css  index.tsx
frontend/src/components/TaskItem/: TaskItem.module.css  index.tsx
frontend/src/types/: FilterFormTypes.ts  TaskTypes.ts
